// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectProfileImage > should handle upload file 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload an invalid file image 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload when user aborted a request 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not handle upload file 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render with value svg 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="p-1.5 rounded-lg border focus-within:border-solid border-theme-secondary-300 h-[92px] w-[92px] dark:border-theme-dark-700 focus-within:border-theme-primary-400"
    >
      <div
        class="overflow-hidden h-full rounded"
      >
        <div
          class="w-full h-full upload-button-wrapper"
        >
          <button
            class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="arrow-up-bracket"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render without value svg 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="inline-flex overflow-hidden relative justify-center items-center h-full rounded-md cursor-pointer focus-within:ring-2 profile-image focus-within:ring-theme-primary-400"
      >
        <img
          alt="Avatar"
          class="object-cover min-h-full"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="overflow-hidden absolute z-10 p-1 w-full h-full opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="flex justify-center items-center h-full rounded-full dark:bg-black bg-theme-secondary-900 opacity-85"
          >
            <div
              class="text-white dark:text-theme-secondary-200"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="flex relative justify-center items-center p-0 w-5 h-5 font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
